# routes/web.php
@@ -27,6 +27,7 @@ use App\Http\Controllers\PostReactionController;
 use App\Http\Controllers\PostReportController;
 use App\Http\Controllers\PostReportModerationController;
 use App\Http\Controllers\PostShareController;
+use App\Http\Controllers\ProfilePostHighlightController;
 use App\Http\Controllers\SavedPostController;
 use App\Http\Controllers\SearchController;
 use App\Http\Controllers\SpaceController;
@@ -96,6 +97,14 @@ Route::middleware(['auth', 'account.active', 'verified'])->group(function () {
         ->name('notifications.read-all');
     Route::get('people', [PeopleController::class, 'index'])->name('people.index');
     Route::get('people/{profile:handle}', [PeopleController::class, 'show'])->name('people.show');
+    Route::put('people/{profile:handle}/posts/{post}/highlight', [ProfilePostHighlightController::class, 'store'])
+        ->scopeBindings()
+        ->middleware('throttle:profile-highlights')
+        ->name('people.posts.highlights.store');
+    Route::delete('people/{profile:handle}/posts/{post}/highlight', [ProfilePostHighlightController::class, 'destroy'])
+        ->scopeBindings()
+        ->middleware('throttle:profile-highlights')
+        ->name('people.posts.highlights.destroy');
     Route::get('messages', [MessageController::class, 'index'])->name('messages.index');
     Route::get('messages/new/{profile:handle}', [MessageController::class, 'compose'])
         ->name('messages.compose');
